--- a/english.html
+++ b/english.html
@@ -1159,6 +1159,8 @@ Error message and password prompt
 
 <li>Vegetarian lasagne</li>
 
+<li>Villa Maroc</li>
+
 <li>Vincent Van Gogh</li>
 
 <li>We Went to Mom's Memorial</li>
@@ -9993,7 +9995,7 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
 </pre>
 </div>
-<div created="20200213160902173" modified="20200605134415685" tags="[[Food addicts]] Coffee Metafiction Bread" title="Cafés">
+<div created="20200213160902173" modified="20200609191913367" tags="[[Food addicts]] Coffee Metafiction Bread" title="Cafés">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[The team]]:
@@ -14517,8 +14519,7 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 </pre>
 </div>
 <div created="20200605133217442" modified="20200605133451083" tags="[[Corona beings]] Music [[Outer sisters]] [[Here in the Ghetto]] Families" title="The Altermans - the cover version">
-<pre>
-[img[pictures/altermanz.jpg]]
+<pre>[img[pictures/altermanz.jpg]]
 
 
 
@@ -15514,6 +15515,15 @@ The farm's animals are delighted with surprise.
 
 
 &lt;&lt;heblink [[לזניה צמחונית]]&gt;&gt;</pre>
+</div>
+<div created="20200609191759620" modified="20200609191935644" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction Houses [[Corona beings]]" title="Villa Maroc">
+<pre>
+
+[img[pictures/villa-maroc.jpg]]
+
+
+
+ &lt;&lt;heblink [[וילה מרוק]]&gt;&gt;</pre>
 </div>
 <div created="20200213171604745" modified="20200510134746427" tags="[[Outer sisters]] [[Hunky Dory]] [[Stories from the future]]" title="Vincent Van Gogh">
 <pre>[img[pictures/van-goch.jpg]]
