--- a/index.html
+++ b/index.html
@@ -695,6 +695,8 @@ Error message and password prompt
 
 <li>וויקליף ז'אן</li>
 
+<li>וילה מרוק</li>
+
 <li>וינסנט ואן-גוך</li>
 
 <li>וס אנדרסון</li>
@@ -9247,7 +9249,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200601071032468" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200601071047510" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200609193106724" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9256,7 +9258,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האלתרמנז - גרסת הכיסוי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[וילה מרוק]] [[הלכות קורונה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9276,7 +9278,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200605134454972" title="$:/temp/search">
+<div created="20161023184814872" modified="20200609192558595" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11090,7 +11092,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200605133748812" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200609192004163" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -13341,6 +13343,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]
 
 &lt;&lt;englink [[Wyclef Jean]]&gt;&gt;</pre>
+</div>
+<div created="20200609191456132" modified="20200609195924614" tags="[[כאן בגטו]] [[מטא בדיון]] [[בדרך לאן שהוא]] בתים [[הלכות קורונה]]" title="וילה מרוק">
+<pre>[img[pictures/villa-maroc.jpg]]
+
+
+!!![[תומר]]:
+
+[[וילה מרוק|http://www.villamaroc.net/]] זה במאה מטר שלנו, ולחלוף על פני חלון הראווה המושך זה חלק משגרת יומנו, שיכולה להיות מסוכנת אם [[ננו|ננו שלי ואני]] איתי. היא נמשכת לכל מה שצבעוני או נוצץ או כסוף או מוזהב גם אם הוא שביר. דגנית ויעל מקבלות אותנו במאור פנים, אנחנו מלטפים את כל השטיחים והבדים היפים, מתיישבים קצת על הספות, מבקרים את התכשיטים ורוצים לקנות המון אך לרוב מתאפקים, ועדיין [[ביתנו משופע|הלכות קורונה]] בוילה מרוק.
+
+
+
+&lt;&lt;englink [[Villa Maroc]]&gt;&gt;</pre>
 </div>
 <div created="20170606183630416" modified="20200510134442982" tags="[[אחיות חוץ]] סגירים [[סיפורים מהעתיד]]" title="וינסנט ואן-גוך">
 <pre>[img[pictures/van-goch.jpg]]
