--- a/index.html
+++ b/index.html
@@ -479,6 +479,8 @@ Error message and password prompt
 
 <li>גואן יין</li>
 
+<li>גוויה של חזיה בכיור</li>
+
 <li>גורה</li>
 
 <li>גורה מספרת 01</li>
@@ -9258,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[וילה מרוק]] [[הלכות קורונה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="טלוויזיה [[טוני סופרנו]] [[כריסטופר מולטיסנטי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9278,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200609192558595" title="$:/temp/search">
+<div created="20161023184814872" modified="20200619140624786" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11092,7 +11094,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200609192004163" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200614141707147" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -11335,6 +11337,20 @@ Is where I want to be
 &lt;&lt;englink [[Guan-yin]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200614120830108" modified="20200619133616633" tags="[[כשהם ישנים]] [[מטא בדיון]] בתים [[בדרך לאן שהוא]]" title="גוויה של חזיה בכיור">
+<pre>[img[pictures/gviyashelhaziya.jpg]]
+
+!!![[אווה]]:
+
+בשלוות הבקר, אני שוטפת את הירקות ושומעת את [[פיליפ]] קורא מן האמבט: &quot;יש גוויה של חזיה בכיור&quot;. &quot;אוי, שכחתי ממנה לגמרי&quot;, אני עונה ואצה לשטוף אותה.
+
+
+
+
+
+&lt;&lt;englink [[A corpse of a bra in the sink]]&gt;&gt;
+.</pre>
 </div>
 <div created="20161026214951927" modified="20200415114153020" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה [[אירי וגורה]] [[מחפשת את אירי]]" title="גורה">
 <pre>[img[pictures/gura.jpg]]
@@ -13257,7 +13273,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[The relief is down the road]]&gt;&gt;</pre>
 </div>
-<div created="20161112230916972" modified="20200322161424186" tags="בתים" title="הקליניקה">
+<div created="20161112230916972" modified="20200619134123920" tags="בתים" title="הקליניקה">
 <pre>[img[pictures/haklinika.jpg]]
 
 !!![[אירי]]:
@@ -13856,16 +13872,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170922153729733" modified="20200324163730758" tags="הסופרנוס טלוויזיה סדרות [[האנקי דורי]]" title="טוני סופרנו">
+<div created="20170922153729733" modified="20200619144916171" tags="הסופרנוס טלוויזיה סדרות [[האנקי דורי]]" title="טוני סופרנו">
 <pre>[img[pictures/tony-soprano.jpg]]
 
 !!![[אנג'ליק]]:
 
 זה סוג של פוקס שטוני התחתן עם [[כרמלה|http://www.imdb.com/title/tt0141842/characters/nm0004908?ref_=ttfc_fc_cl_t3]] - שלו ובעיקר מזל גדול לילדיו.
 
-לקראת סוף הסדרה, (כן, סיימנו אמש), טוני נוסע ללאס וגאס, ופוגש שם בחורה שהייתה של [[כריס|כריסטופר מולטיסנטי]], שכבר מת. הוא לוקח איתה [[פיוטה|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%95%D7%98%D7%94]]. הוא עובר חוויה שמשפיעה עליו - ואף חוזר [[מהורהר|https://www.youtube.com/watch?v=1re5cGlP-Xg]].
+לקראת סוף [[הסדרה|הסופרנוס]], (כן, סיימנו אמש), טוני נוסע ללאס וגאס, ופוגש שם בחורה שהייתה של [[כריס|כריסטופר מולטיסנטי]], שכבר מת. הוא לוקח איתה [[פיוטה|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%95%D7%98%D7%94]]. הוא עובר חוויה שמשפיעה עליו, ואף חוזר [[מהורהר|https://www.youtube.com/watch?v=1re5cGlP-Xg]].
 
-[[הסוף נשאר פתוח]]
+
 
 
 
@@ -15326,12 +15342,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Leonard Cohen]]&gt;&gt;</pre>
 </div>
-<div created="20180614102328845" modified="20200226103940541" tags="סדרות טלוויזיה" title="להרוג את איב">
+<div created="20180614102328845" modified="20200619142805706" tags="סדרות טלוויזיה" title="להרוג את איב">
 <pre>[img[pictures/killing-eve.jpg]]
 
 !!![[אירי וגורה]]:
 
-[[כשאיב פלסטרי|https://www.imdb.com/name/nm0644897/?ref_=tt_cl_t1]] רוצה לתפוס את [[וילנל|https://www.imdb.com/name/nm3069650/?ref_=tt_cl_t2]], וילנל נותנת לה ולנו [[גוד טיים|https://www.youtube.com/watch?v=SBvNZaELKpU]]. צחקנו, התרגשנו, ראינו את [[מרטין|https://www.imdb.com/name/nm0091035/?ref_=tt_cl_t4]] [[מהגשר|הגשר]], את [[קרולין מרטנס|https://www.imdb.com/name/nm0789716/?ref_=tt_cl_t3]],  וכמובן את כריסטיאנה [[מהאנטומיה של גריי|האנטומיה של גריי]]. היה [[כיף|https://www.imdb.com/title/tt7016936/]], ואנחנו מוסיפות ראיון רדיו מצולם נחמד עם [[סנדרה|https://www.youtube.com/watch?v=S0Fdo0mbFdE]]
+[[כשאיב פלסטרי|https://www.imdb.com/name/nm0644897/?ref_=tt_cl_t1]] רוצה לתפוס את [[וילנל|https://www.imdb.com/name/nm3069650/?ref_=tt_cl_t2]], וילנל נותנת לה ולנו [[גוד טיים|https://www.youtube.com/watch?v=lSNSMTEMGmE]]. צחקנו, התרגשנו, ראינו את [[מרטין|https://www.imdb.com/name/nm0091035/?ref_=tt_cl_t4]] [[מהגשר|הגשר]], את [[קרולין מרטנס|https://www.imdb.com/name/nm0789716/?ref_=tt_cl_t3]],  וכמובן את כריסטיאנה [[מהאנטומיה של גריי|האנטומיה של גריי]]. היה [[כיף|https://www.imdb.com/title/tt7016936/]], ואנחנו מוסיפות ראיון רדיו מצולם נחמד עם [[סנדרה|https://www.youtube.com/watch?v=S0Fdo0mbFdE]]
 
 
 
@@ -15932,7 +15948,7 @@ We rise to play a greater part.
 ''האם מותר לכם לפרסם את הגירסה החדשה שלכם ברשת?''
 כן, במסגרת תנאי הרשיון (לפרטים, לחצו על ה&lt;img alt=&quot;Creative Commons License&quot; style=&quot;width:44px; border-width:0&quot; src=&quot;https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png&quot;&gt; בצד ימין למטה)</pre>
 </div>
-<div created="20170328175210280" modified="20200324163936814" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]] [[האנקי דורי]]" title="מאיר אריאל">
+<div created="20170328175210280" modified="20200614090613617" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]] [[האנקי דורי]] [[סיפורים מהעתיד]]" title="מאיר אריאל">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
 
