--- a/english.html
+++ b/english.html
@@ -255,6 +255,8 @@ Error message and password prompt
 
 <li>9-side-wishing-star</li>
 
+<li>A corpse of a bra in the sink</li>
+
 <li>A December`s night</li>
 
 <li>A Fairy Tale's Mother</li>
@@ -9125,7 +9127,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200605134440437" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200619150243967" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9154,7 +9156,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200605133710492" title="$:/temp/search">
+<div created="20161023184814872" modified="20200623162122161" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9346,6 +9348,22 @@ coming soon as possible
 
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
+</div>
+<div created="20200614141033935" modified="20200614141312245" tags="[[On the road to somewhere]] Metafiction [[When they sleep]] Houses" title="A corpse of a bra in the sink">
+<pre>[img[pictures/gviyashelhaziya.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[גוויה של חזיה בכיור]]&gt;&gt;
+
+
+
+
+
+</pre>
 </div>
 <div created="20200226093553507" modified="20200503153652912" tags="[[Here in the Ghetto]] Music Windows" title="A December`s night">
 <pre>[img[pictures/layla-kan.jpg]]
@@ -9640,8 +9658,16 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
  &lt;&lt;heblink [[אספרגוס]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226163928003" modified="20200324165535993" tags="Music [[Outer sisters]] [[Here in the Ghetto]] [[Hunky Dory]]" title="Assaf Amdursky">
+<div created="20200226163928003" modified="20200619151115929" tags="Music [[Outer sisters]] [[Here in the Ghetto]] [[Hunky Dory]]" title="Assaf Amdursky">
 <pre>[img[pictures/Assaf-Amdursky.jpg]]
+
+
+!!![[Yoyo]]: 
+
+[[Assaf Amdursky|https://en.wikipedia.org/wiki/Assaf_Amdursky]] wrote and did beautiful interesting things [[before|https://www.youtube.com/watch?v=KQBQBAdsR3o]] and [[after|https://www.youtube.com/watch?v=Rjr2gUvhdI0]] [[MENOIM SHKETIM|https://www.youtube.com/watch?v=PLI2bcnboLY]] (Silent Engines), but Silent Engines is one of the albums of my life. I crashed with it until I reached [[the lab|The lab]]. After that the live album was released with a great [[MAAYAN|https://www.youtube.com/watch?v=dH4hfVXD2Jw]] (Spring) version. 
+
+I didn't dare to hear [[HATKAFAT LEV|https://www.youtube.com/watch?v=YS1C6lJImOc]] (Heart Attack) until recently - when the highlight was going with [[Tomer]] some time ago to the performance that celebrated 20 years to this wonderful album. 
+
 
 
 
@@ -10360,8 +10386,12 @@ coming soon as possible
 
 </pre>
 </div>
-<div created="20200226111628712" modified="20200226111733644" tags="[[The Sopranos]] TV [[TV Series]]" title="Christopher Moltisanti">
+<div created="20200226111628712" modified="20200619141444992" tags="[[The Sopranos]] TV [[TV Series]]" title="Christopher Moltisanti">
 <pre>[img[pictures/christopher-moltisanti.jpg]]
+
+!!![[Yoyo]]:
+
+In the end of the series they made us think that [[Chris's|https://www.imdb.com/name/nm0408284/?ref_=fn_nm_nm_1]] spirit got into [[a cat|https://www.youtube.com/watch?v=xfi5I02r6xE]], that's when I realized, I got a cosmic approval for my great fondness of him, even when he's a total idiot and a complete ass.
 
 
 
@@ -10462,7 +10492,7 @@ Be good.
 
  &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
-<div created="20200213155644547" modified="20200605133945159" tags="[[Food addicts]] Coffee [[The kitchen by Genevieve]] Cafés" title="Coffee">
+<div created="20200213155644547" modified="20200614141250247" tags="[[Food addicts]] Coffee [[The kitchen by Genevieve]] Cafés" title="Coffee">
 <pre>[img[pictures/coffee.jpg]]
 
 
@@ -11369,7 +11399,7 @@ I like to do it with music, [[as well|A tile’s etude]], for example [[this|htt
 
  &lt;&lt;heblink [[שעועית ירוקה בחמאה ושום]]&gt;&gt;</pre>
 </div>
-<div created="20200220161521230" modified="20200220162527887" tags="TV [[TV Series]] Mothers" title="Grey’s Anatomy">
+<div created="20200220161521230" modified="20200619143200382" tags="TV [[TV Series]] Mothers" title="Grey’s Anatomy">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
 
@@ -11988,10 +12018,19 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 </pre>
 </div>
-<div created="20200223190516303" modified="20200513151326347" tags="[[Menopause sisters]] [[Outer sisters]] Films Mothers" title="Jane Fonda">
+<div created="20200223190516303" modified="20200619140244098" tags="[[Menopause sisters]] [[Outer sisters]] Films Mothers" title="Jane Fonda">
 <pre>[img[pictures/jane-fonda.jpg]]
 
 
+!!![[Eva]]:
+
+This week I invited the girls over to watch the fascinating [[5 acts documentary|https://www.imdb.com/title/tt7689958/]] about [[Jane Fonda|https://www.imdb.com/name/nm0000404/]] - a woman with spark in the eyes. I did it after the [[well kept|Non-hunky-dory]] Sonia told me she thinks about injecting here and there.
+
+In the fifth part of the movie (an hour and 58 minutes into the movie) Jane says:
+
+//I'm glad that I look good for my age but I've also had plastic surgeries I'm not gonna lie about that. On one level I hate the fact that I have had the need to alter myself physically to feel that I'm ok. I wish that I wasn't like that. I love older faces, I loved lived in faces, I love Vanessa Redgrave face, I wish I was braver, but I am what I am.//
+
+[[This is the picture|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] Gura  draw the beloved phenomenal Jane Fonda.
 
 
 
@@ -12178,9 +12217,12 @@ A good friend''
 
 </pre>
 </div>
-<div created="20200226103744594" modified="20200226103917687" tags="TV [[TV Series]]" title="Killing Eve">
+<div created="20200226103744594" modified="20200619143323659" tags="TV [[TV Series]]" title="Killing Eve">
 <pre>[img[pictures/killing-eve.jpg]]
 
+!!![[Iry and Gura]]:
+
+When [[Eve Polastri|https://www.imdb.com/name/nm0644897/?ref_=tt_cl_t1]] wants to catch [[Villanelle|https://www.imdb.com/name/nm3069650/?ref_=tt_cl_t2]], Villanelle gives her and us [[a good time|https://www.youtube.com/watch?v=lSNSMTEMGmE]]. We laughed, we got emotional, we saw [[Martin|https://www.imdb.com/name/nm0091035/?ref_=tt_cl_t4 from [[The Bridge]], [[Carolyn Martens|https://www.imdb.com/name/nm0789716/?ref_=tt_cl_t3]] and obviously Christina from [[Grey's Anatomy|Grey’s Anatomy]]. It was [[fun|https://www.imdb.com/title/tt7016936/]], and we attach a nice filmed radio interview with [[Sandra|https://www.youtube.com/watch?v=S0Fdo0mbFdE]]. 
 
 
  &lt;&lt;heblink [[להרוג את איב]]&gt;&gt;</pre>
@@ -12848,7 +12890,7 @@ I love the harmony between the food species in a meal, and most important, a mea
 
  &lt;&lt;heblink [[ארוחות]]&gt;&gt;</pre>
 </div>
-<div created="20200202175811447" modified="20200324171235272" tags="[[Outer sisters]] Music [[Hunky Dory]]" title="Meir Ariel">
+<div created="20200202175811447" modified="20200614090649092" tags="[[Outer sisters]] Music [[Hunky Dory]] [[Stories from the future]]" title="Meir Ariel">
 <pre>[img[pictures/0bBcnTVPP0ggEKv3.jpg]]
 
 
@@ -13030,13 +13072,13 @@ This is Dana, and she wrote the stories that are not here yet.
 
  &lt;&lt;heblink [[אימא, סבתא ואני]]&gt;&gt;</pre>
 </div>
-<div created="20200202190317522" modified="20200501134333597" tags="[[TV Series]] TV [[The global village]] [[Life is for those who can't deal with drugs]]" title="Monkeys with car keys">
+<div created="20200202190317522" modified="20200623162118736" tags="[[TV Series]] TV [[The global village]] [[Life is for those who can't deal with drugs]]" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 
 !!![[Yoyo]]:
 
-This sentence was said, by Woody Ellen's mother allegedly, to [[Ed|https://www.imdb.com/name/nm0123261/?ref_=nm_mv_close]] on [[Northern Exposure]] TV show [[(third season fourth episode)|https://www.imdb.com/title/tt0662321/]].
+This sentence was said, by allegedly Woody Ellen's mother, to [[Ed|https://www.imdb.com/name/nm0123261/?ref_=nm_mv_close]] on [[Northern Exposure]] TV show [[(third season fourth episode)|https://www.imdb.com/title/tt0662321/]].
 
 As a [[Coen sister]], my DNA carries, I suppose, several passers-by- maybe [[Cossacks|https://en.wikipedia.org/wiki/Cossacks]], maybe [[Tatars|https://en.wikipedia.org/wiki/Tatars]], maybe [[Vikings|https://en.wikipedia.org/wiki/Vikings]], [[Phoenicians|https://en.wikipedia.org/wiki/Phoenicia]], [[Jebusite|https://en.wikipedia.org/wiki/Jebusite]], [[Huns|https://en.wikipedia.org/wiki/Huns]] and the rest of them. 
 
@@ -13636,8 +13678,13 @@ Egg powder? If by any chance you dropped an egg, let it dry, let the cat scratch
  &lt;&lt;heblink [[אבקות]]&gt;&gt;
 </pre>
 </div>
-<div created="20200429135731380" modified="20200429135930238" tags="[[Here in the Ghetto]] [[Corona beings]] [[True stories]] [[On the road to somewhere]]" title="Praying at Bilu garden">
+<div created="20200429135731380" modified="20200619133431584" tags="[[Here in the Ghetto]] [[Corona beings]] [[True stories]] [[On the road to somewhere]]" title="Praying at Bilu garden">
 <pre>[img[pictures/bilugarden.jpg]]
+
+
+!!![[Tomer]]:
+
+At Independence day 5780 with easing and but also lockdown news, I dropped Nano at [[Jazz's mom]] and went to [[Shoretzky]], crossed Yehuda ha-Levi St, passed the synagogue and saw that the prayers moved to Bilu Garden for now, standing two meters apart, wearing masks and praying between the trees.  
 
 
 
@@ -14666,8 +14713,14 @@ Queng was the first I got attached to, he was the one walking around with me in 
 
 </pre>
 </div>
-<div created="20200322161201000" modified="20200322161331835" tags="Houses Metafiction" title="The Clinique">
+<div created="20200322161201000" modified="20200619134217822" tags="Houses Metafiction" title="The Clinique">
 <pre>[img[pictures/haklinika.jpg]]
+
+!!![[Iry]]:
+
+I moved to live at the Clinique in the beginning of 2016.
+
+It's hard to believe, that in a room that I love so much, a filthy man's work was taking care of women, in other words he was their famous gynecologist. At Christmas dinner we all [[heard from Philip|Wishing star 21]] about the not so far ago history of this wonder apartment, that definitely sounds like a ghost tale.
 
 
 
@@ -15324,8 +15377,17 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
-<div created="20200226111310016" modified="20200324172446742" tags="TV [[The Sopranos]] [[TV Series]] [[Hunky Dory]]" title="Tony Soprano">
+<div created="20200226111310016" modified="20200619145120412" tags="TV [[The Sopranos]] [[TV Series]] [[Hunky Dory]]" title="Tony Soprano">
 <pre>[img[pictures/tony-soprano.jpg]]
+
+
+!!![[Angelic]]:
+
+It's kind of a lucky accident, that Tony married [[Carmela|https://www.imdb.com/title/tt0141842/characters/nm0004908?ref_=ttfc_fc_cl_t3]] - lucky for him and mostly for their children.
+
+Towards [[the series|The Sopranos]] finale (yes, we finished last night), Tony goes to Las Vegas, where he meets a girl that dated [[Chris|Christopher Moltisanti]], who's already dead. They do [[peyote|https://en.wikipedia.org/wiki/Peyote]] together. He goes through a meaningful experience - and even comes back [[contemplative|https://www.youtube.com/watch?v=1re5cGlP-Xg]].
+
+
 
 
 
@@ -15413,8 +15475,15 @@ Who doesn't like the taste of [[real blood|https://www.imdb.com/title/tt0844441/
 
 </pre>
 </div>
-<div created="20200212204228178" modified="20200503154516144" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
+<div created="20200212204228178" modified="20200619142056415" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
 <pre>[img[pictures/television.jpg]]
+
+
+!!![[Tomer]]:
+
+I'm sitting in front of the [[TV]] in the living room, watching a show called [[And Then Came The Baby|https://www.haaretz.co.il/gallery/television/.premium-1.6975294]]. [[Sweet Nano|Nano and I]] is already asleep, and I think to myself, how lucky I am - no one to blame, no one to fight with, no need to settle accounts - just my happy Nano and me. 
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[TV]]&quot;&gt;&gt;
 
@@ -15517,9 +15586,7 @@ The farm's animals are delighted with surprise.
 &lt;&lt;heblink [[לזניה צמחונית]]&gt;&gt;</pre>
 </div>
 <div created="20200609191759620" modified="20200609191935644" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction Houses [[Corona beings]]" title="Villa Maroc">
-<pre>
-
-[img[pictures/villa-maroc.jpg]]
+<pre>[img[pictures/villa-maroc.jpg]]
 
 
 
@@ -15725,8 +15792,18 @@ Sprinkle the roasted pine nuts on top. You can also sprinkle the chopped seasoni
 
  &lt;&lt;heblink [[אורז לבן עם צנוברים]]&gt;&gt;</pre>
 </div>
-<div created="20200503152637700" modified="20200503152943133" tags="[[Here in the Ghetto]] Houses [[Corona beings]]" title="Windows">
+<div created="20200503152637700" modified="20200619145252051" tags="[[Here in the Ghetto]] Houses [[Corona beings]]" title="Windows">
 <pre>[img[pictures/windows.jpg]]
+
+
+
+!!![[Tomer]]:
+
+I don't clean windows, that's a rule I have. On my behalf, outside the windows it's already the garden.
+
+
+
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[Windows]]&quot;&gt;&gt;
