--- a/english.html
+++ b/english.html
@@ -9136,7 +9136,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Killing Eve]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The Clinique]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14713,14 +14713,14 @@ Queng was the first I got attached to, he was the one walking around with me in 
 
 </pre>
 </div>
-<div created="20200322161201000" modified="20200619134217822" tags="Houses Metafiction" title="The Clinique">
+<div created="20200322161201000" modified="20200623164616299" tags="Houses [[True stories]]" title="The Clinique">
 <pre>[img[pictures/haklinika.jpg]]
 
 !!![[Iry]]:
 
 I moved to live at the Clinique in the beginning of 2016.
 
-It's hard to believe, that in a room that I love so much, a filthy man's work was taking care of women, in other words he was their famous gynecologist. At Christmas dinner we all [[heard from Philip|Wishing star 21]] about the not so far ago history of this wonder apartment, that definitely sounds like a ghost tale.
+It's hard to believe, that in a room that I love so much, a filthy man's work was taking care of women, in other words he was their famous gynecologist. At Christmas dinner we all [[heard from Philip|Wishing star 21]] about the not so far ago history of this wonder apartment, that definitely sounds like a nightmare.
 
 
 
