--- a/english.html
+++ b/english.html
@@ -529,6 +529,8 @@ Error message and password prompt
 
 <li>Genejuice</li>
 
+<li>Genesis Hilltop</li>
+
 <li>Genevieve</li>
 
 <li>Gesund-Heights</li>
@@ -1001,6 +1003,8 @@ Error message and password prompt
 
 <li>Spiral Spring</li>
 
+<li>Stalin</li>
+
 <li>Stalin's basement</li>
 
 <li>Steve Buscemi</li>
@@ -1051,6 +1055,8 @@ Error message and password prompt
 
 <li>The Bridge</li>
 
+<li>The Camera</li>
+
 <li>The Chinese</li>
 
 <li>The Clinique</li>
@@ -1071,11 +1077,15 @@ Error message and password prompt
 
 <li>The Grass</li>
 
+<li>The Hairdresser</li>
+
 <li>The hierarchy in the refrigerator</li>
 
 <li>The Hoodj luck club</li>
 
 <li>The Hostel</li>
+
+<li>The K Sisters</li>
 
 <li>The kitchen by Genevieve</li>
 
@@ -1084,6 +1094,8 @@ Error message and password prompt
 <li>The lawyer</li>
 
 <li>The line for Grasyani</li>
+
+<li>The Masseur</li>
 
 <li>The mugs we drink from</li>
 
@@ -1096,6 +1108,8 @@ Error message and password prompt
 <li>The relief is down the road</li>
 
 <li>The right hand doesn't know</li>
+
+<li>The Sailor</li>
 
 <li>The sisters' questionnaire</li>
 
@@ -9002,7 +9016,7 @@ Error message and password prompt
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
             &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;Palms of the hands&quot;,
+            &quot;text&quot;: &quot;The newspaper desk&quot;,
             &quot;type&quot;: &quot;text/plain&quot;
         }
     }
@@ -9127,7 +9141,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200619150243967" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200627162149706" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9136,7 +9150,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The Clinique]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The Camera]] [[The bartender]] Genejuice [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9156,7 +9170,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200623162122161" title="$:/temp/search">
+<div created="20161023184814872" modified="20200627160511624" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9349,9 +9363,14 @@ coming soon as possible
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
-<div created="20200614141033935" modified="20200614141312245" tags="[[On the road to somewhere]] Metafiction [[When they sleep]] Houses" title="A corpse of a bra in the sink">
+<div created="20200614141033935" modified="20200625131722223" tags="[[On the road to somewhere]] Metafiction [[When they sleep]] Houses" title="A corpse of a bra in the sink">
 <pre>[img[pictures/gviyashelhaziya.jpg]]
 
+
+!!![[Eva]]:
+
+In the morning serenity, I wash the vegetables and hear [[Philip]] calling from the bath: &quot;there is a corpse of a bra in the sink&quot;.
+&quot;Oh, I totally forgot about it&quot; I answer and hurry to wash it.
 
 
 
@@ -9683,9 +9702,14 @@ I didn't dare to hear [[HATKAFAT LEV|https://www.youtube.com/watch?v=YS1C6lJImOc
 
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
-<div created="20200226100452363" modified="20200324165555052" tags="HH Music [[Hunky Dory]]" title="Aunt Jemima">
+<div created="20200226100452363" modified="20200625141051291" tags="HH Music [[Hunky Dory]]" title="Aunt Jemima">
 <pre>[img[pictures/aunt-jemima.jpg]]
 
+!!![[Gura]]:
+
+Aunt Jemima is a group of four locals of [[the city|Genesis Hilltop]] standing at [[Tethys ocean]] shore. 
+
+They play and sing every night at [[Cafe Müller]]. 
 
 
  &lt;&lt;heblink [[אנט ג'מיימה]]&gt;&gt;</pre>
@@ -10010,8 +10034,16 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
 
  &lt;&lt;heblink [[אחיות לחושן]]&gt;&gt;</pre>
 </div>
-<div created="20200216183951936" modified="20200216184242348" tags="HH" title="Cafe Müller">
+<div created="20200216183951936" modified="20200625134314832" tags="HH" title="Cafe Müller">
 <pre>[img[pictures/cafe-muller.jpg]]
+
+
+!!![[Gura]]:
+
+The Café is on the first floor of [[Gesund-Heights]], and it's a café bar.
+It belongs to [[Shalom]], who admires [[Pina Bausch]], but it run by [[the bartender|The bartender]] who's called Gura.
+
+The daily HAPPY HOUR takes place at Café Miller, and it includes cocktails and drinks at low prices, and an [[Aunt Jemima]] concert.
 
 
 
@@ -11283,6 +11315,17 @@ Or as Alfred used to say:
  &lt;&lt;heblink [[מיצפרש]]&gt;&gt;
 </pre>
 </div>
+<div created="20200625132023513" modified="20200625132244400" tags="HH Houses Families" title="Genesis Hilltop">
+<pre>[img[pictures/mizpe-reshit.jpg]]
+
+
+
+
+
+
+
+ &lt;&lt;heblink [[מצפה ראשית]]&gt;&gt;</pre>
+</div>
 <div created="20200213145354960" modified="20200219171845530" tags="[[Coen sister]] Mothers [[The kitchen by Genevieve]] [[Menopause sisters]]" title="Genevieve">
 <pre>[img[pictures/genevieve.jpg]]
 
@@ -11309,9 +11352,14 @@ She loves us and take care of us all. In the end of every working day she moves 
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
-<div created="20200322160112085" modified="20200522143725402" tags="HH Houses" title="Gesund-Heights">
+<div created="20200322160112085" modified="20200625133759583" tags="HH Houses" title="Gesund-Heights">
 <pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
+!!![[Gura]]:
+
+A building, located at [[Genesis Hilltop]], viewing Tethys Sea. The building is located at the industrial area of the downtown. It has 6 floors and it belongs to [[Shalom]]. On the fourth floor [[the hostel|The Hostel]] is located, where the passersby sleep over night. On the third floor there are three offices. On the second floor an [[esoteric news desk|The newspaper desk]]. On the first floor  [[Cafe Müller]] is located, it has a plaza which contains also the [[hairdressing salon|The barber shop]], the [[CDs store|Cd store]]. The building also has a basement where the janitor Stalin lives. In the basement there are the storerooms as well.
+
+Gesund-Heights is the prime arena of [[everything that (might have) occurred and everything that (almost) happened in the HH|HH]]. 
 
 
 
@@ -14125,9 +14173,12 @@ Everything will be clarified''
  &lt;&lt;heblink [[חינוך מיני]]&gt;&gt;
 </pre>
 </div>
-<div created="20200322163727748" modified="20200322163956274" tags="HH" title="Shalom">
+<div created="20200322163727748" modified="20200625141332504" tags="HH" title="Shalom">
 <pre>[img[pictures/shalom.jpg]]
 
+!!![[Gura]]:
+
+Shalom is the owner of [[Gesund-Heights]]. He's an almost-60-year-old man. He's a wealthy man, his fortune is all from an inheritance he received. He's good looking, he has a good heart, people tend to like him, he lacks a business sense, has an artistic sense and he even creates, likes woman (but not a womanizer). Shalom lives on the fifth floor, and on the floor above him he shares a studio with a masseur and another artist. 
 
 
  &lt;&lt;heblink [[שלום]]&gt;&gt;
@@ -14355,6 +14406,17 @@ The [[Alexanderian|Alexander Technique]] thinking is very beneficial, in order t
 
 
  &lt;&lt;heblink [[קפיץ ספירלי]]&gt;&gt;
+</pre>
+</div>
+<div created="20200627152629924" modified="20200627152804385" tags="HH Metafiction" title="Stalin">
+<pre>
+[img[pictures/stalin.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[סטלין]]&gt;&gt;
 </pre>
 </div>
 <div created="20200313121234753" modified="20200313121413548" tags="HH" title="Stalin's basement">
@@ -14605,8 +14667,8 @@ Here, in the bubble-like ghetto, the one which is famous for its hallucinatory d
 
  &lt;&lt;heblink [[הבריסטות שכאן]]&gt;&gt;</pre>
 </div>
-<div created="20200219160048637" modified="20200531111612266" tags="HH Coffee" title="The bartender">
-<pre>[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
+<div created="20200219160048637" modified="20200627183506405" tags="HH Coffee" title="The bartender">
+<pre>[img[pictures/thebartender.jpg]]
 
 !!![[Gura]]:
 
@@ -14687,6 +14749,23 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
  &lt;&lt;heblink [[הגשר]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200627162251658" modified="20200627162501360" tags="HH" title="The Camera">
+<pre>
+[img[pictures/UqCNt0i5VQFWqv6t.jpg]]
+
+
+
+!!![[Gura]]:
+
+The camera is the story teller of [[HH]].
+
+
+
+
+ &lt;&lt;heblink [[המצלמה]]&gt;&gt;
 
 </pre>
 </div>
@@ -14853,6 +14932,21 @@ The grass after rain, is greenish green.
  &lt;&lt;heblink [[הדשא]]&gt;&gt;
 </pre>
 </div>
+<div created="20200627160310173" modified="20200627160935137" tags="HH" title="The Hairdresser">
+<pre>
+[img[pictures/hasaparit.jpg]]
+
+!!![[Gura]]:
+
+Anna, who own the hairdressing salon on the first floor of [[Gesund-Heights]], is a (very) married woman for many years. She's a mom. She fixes everything, she's a manipulator, she's feminine, she's the ultimate woman, and the one who reminds her the most is Genevieve.
+ 
+The [[K sisters|The K Sisters]] can't stand her.
+
+
+
+  &lt;&lt;heblink [[]]&gt;&gt;
+</pre>
+</div>
 <div created="20200217200909473" modified="20200219133149839" tags="Kitchens [[The kitchen by Genevieve]]" title="The hierarchy in the refrigerator">
 <pre>[img[pictures/bamekarer.jpg]]
 
@@ -14890,6 +14984,20 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 
  &lt;&lt;heblink [[ההוסטל]]&gt;&gt;
+</pre>
+</div>
+<div created="20200627160839146" modified="20200627161221073" tags="HH" title="The K Sisters">
+<pre>
+[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+
+
+!!![[Gura]]:
+
+A K sister [[will forever be|HH]] a K sister
+
+
+
+ &lt;&lt;heblink [[האחיות K]]&gt;&gt;
 </pre>
 </div>
 <div created="20200213161521882" modified="20200502114106777" tags="Meals Kitchens Recipes Bread" title="The kitchen by Genevieve">
@@ -14930,6 +15038,22 @@ Here and now during the Corona times, not more than a hundred meters from home, 
 
 
  &lt;&lt;heblink [[התור לגרציאני]]&gt;&gt;
+</pre>
+</div>
+<div created="20200627161929886" modified="20200627162137475" tags="HH" title="The Masseur">
+<pre>
+[img[pictures/sVIXOUGXydNO6V0Z.jpg]]
+
+
+!!![[Gura]]:
+
+
+Zoe. The happy-sad therapist. A copywriter head, therapeutic, taking care of everything, can be enlisted to manipulating, has acting skills, a masseur, has an innocent look, diligent, a planner. 
+
+
+
+
+ &lt;&lt;heblink [[המסאז'יסטית]]&gt;&gt;
 </pre>
 </div>
 <div created="20200217194809275" modified="20200605134340966" tags="Coffee Kitchens Houses [[The kitchen by Genevieve]] Cafés" title="The mugs we drink from">
@@ -14987,6 +15111,22 @@ Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometime
 ''In the animal farm'', the right hand doesn't know, what the left hand is doing (and the other way around)
 
  &lt;&lt;heblink [[יד ימין אינה יודעת]]&gt;&gt;
+</pre>
+</div>
+<div created="20200627161353971" modified="20200627161629845" tags="HH" title="The Sailor">
+<pre>
+[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
+
+
+!!![[Gura]]:
+
+CJ is the tough one in the group. A sailor, a loner, suspicious. The one who comes once a and gets everything. Has a comical sense which based on anger.  
+
+
+
+ &lt;&lt;heblink [[הספנית]]&gt;&gt;
+
+
 </pre>
 </div>
 <div created="20200202185828817" modified="20200306133216099" tags="[[Coen sister]]" title="The sisters' questionnaire">
@@ -15475,7 +15615,7 @@ Who doesn't like the taste of [[real blood|https://www.imdb.com/title/tt0844441/
 
 </pre>
 </div>
-<div created="20200212204228178" modified="20200619142056415" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
+<div created="20200212204228178" modified="20200627162401548" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
 <pre>[img[pictures/television.jpg]]
 
 
