--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="טלוויזיה [[טוני סופרנו]] [[כריסטופר מולטיסנטי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="הברמנית [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200619140624786" title="$:/temp/search">
+<div created="20161023184814872" modified="20200627161336659" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11094,7 +11094,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200614141707147" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200627162523320" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -12402,12 +12402,15 @@ different tastes, but there were things we both love: family, work, people in al
 &lt;&lt;englink [[House]]&gt;&gt;
 </pre>
 </div>
-<div created="20170320161241857" modified="20181023114920639" tags="HH" title="האחיות K">
+<div created="20170320161241857" modified="20200627161306495" tags="HH" title="האחיות K">
 <pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
 
 !!![[גורה]]:
 
 K-SISTER [[לעולם תהיה|HH]] K-SISTER
+
+
+&lt;&lt;englink [[The K Sisters]]&gt;&gt;
 </pre>
 </div>
 <div created="20180731155632659" modified="20200215102611714" tags="[[קופים ממונעים]] אימהות" title="האחיות בלות">
@@ -12572,8 +12575,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The baristas here]]&gt;&gt;
 </pre>
 </div>
-<div created="20161217141221233" modified="20200219160632801" tags="HH קפה" title="הברמנית">
-<pre>[img[pictures/9q6T8aBMBF8FbdcN.JPG]]
+<div created="20161217141221233" modified="20200627183416486" tags="HH קפה" title="הברמנית">
+<pre>[img[pictures/thebartender.jpg]]
 
 גורה - הצעירה בבנות, היא ברמנית שמג'אנגלת מלים ומשקאות, לרוב מצליחה לא לעורר התנגדויות למרות שבהתחלה טועים לחשוב שהיא אנטיפטית/ עצבנית/סנובית. יש לה זכרון פנומנלי. 
 
@@ -12956,13 +12959,16 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170318201423053" modified="20170507181925980" tags="HH" title="המסאז'יסטית">
+<div created="20170318201423053" modified="20200627162231513" tags="HH" title="המסאז'יסטית">
 <pre>[img[pictures/sVIXOUGXydNO6V0Z.jpg]]
 
 
 !!![[גורה]]:
 
-זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
+זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.
+
+
+&lt;&lt;englink [[The Masseur]]&gt;&gt;</pre>
 </div>
 <div created="20161113192814802" modified="20200501140624174" tags="בתים [[נאמני הגנזך]] [[מטא בדיון]] סגירים [[החיים נועדו למי שלא יכול להתמודד עם סמים]]" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
@@ -13005,12 +13011,15 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The lab]]&gt;&gt;</pre>
 </div>
-<div created="20170320191741802" modified="20170507182321859" tags="HH" title="המצלמה">
+<div created="20170320191741802" modified="20200627162554531" tags="HH" title="המצלמה">
 <pre>[img[pictures/UqCNt0i5VQFWqv6t.jpg]]
 
 !!![[גורה]]:
 
-המצלמה היא הסטורי טלר של [[HH]].</pre>
+המצלמה היא הסטורי טלר של [[HH]].
+
+
+&lt;&lt;englink [[The Camera]]&gt;&gt;</pre>
 </div>
 <div created="20161024204444942" modified="20200313121533376" tags="בתים HH" title="המרתף של סטלין">
 <pre>בקומה מינוס 1 של [[געזונטהייטס]] מתגורר [[סטלין]] השרת. כאן נמצאים כל כלי העבודה ואמצעי הייצור שלו: ממטאטאים ומצלמות אבטחה רזרביות ועד ל[[שָה נוּאָר]], השרת שמארח את
@@ -13192,23 +13201,30 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The mugs we drink from]]&gt;&gt;</pre>
 </div>
-<div created="20170318200354245" modified="20170507181909075" tags="HH" title="הספנית">
+<div created="20170318200354245" modified="20200627161721938" tags="HH" title="הספנית">
 <pre>[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
 
 !!![[גורה]]:
 
-CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו שמגיעה פעם ב... וקולטת הכל. בעלת חוש קומי המבוסס על כעס.
+CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו שמגיעה פעם ב וקולטת הכל. בעלת חוש קומי המבוסס על כעס.
 
-</pre>
+
+
+&lt;&lt;englink [[The Sailor]]&gt;&gt;</pre>
 </div>
-<div created="20170318193034082" modified="20170507181544099" tags="HH" title="הספרית">
+<div created="20170318193034082" modified="20200627160725525" tags="HH" title="הספרית">
 <pre>[img[pictures/hasaparit.jpg]]
 
 !!![[גורה]]:
 
 אנה, שמספרתה נמצאת בקומה הראשונה של [[געזונטהייטס]], והיא אישה נשואה (מאוד) הרבה שנים. היא אמא. היא מתקנת הכל, היא תחמנית, היא נשית, היא האישה האולטימטיבית, ומי שהכי מזכירה אותה היא ז'נבייב. 
 
-ה-K סיסטרס לא סובלות אותה.</pre>
+ה-K סיסטרס לא סובלות אותה.
+
+
+
+
+&lt;&lt;englink [[The Hairdresser]]&gt;&gt;</pre>
 </div>
 <div created="20180315162507739" modified="20200426134135077" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]] משפחות" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
@@ -17261,28 +17277,21 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Steve Buscemi]]&gt;&gt;</pre>
 </div>
-<div created="20161026224824040" modified="20200313121248616" tags="HH [[מטא בדיון]]" title="סטלין">
-<pre>@@.center
+<div created="20161026224824040" modified="20200627152831572" tags="HH [[מטא בדיון]]" title="סטלין">
+<pre>[img[pictures/stalin.jpg]]
 
-[img width=200 [למצולמים אין קשר|https://upload.wikimedia.org/wikipedia/commons/4/41/Lev_Trotsky.jpg]]
 
-[[למצולמים אין קשר|https://en.wikipedia.org/wiki/Leon_Trotsky]]
 
-@@
 
 !!![[יויו]]:
 
-סטלין הוא דמות חוצה מציאויות:
 
-* יש, כמובן, את [[סטלין המקורי™|https://he.wikipedia.org/wiki/יוסיף_סטלין]] , שאהב לייצר מציאויות (עוד כשהיה [[עורך פראבדה|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%90%D7%91%D7%93%D7%94#%D7%94%D7%AA%D7%A7%D7%95%D7%A4%D7%94_%D7%94%D7%A1%D7%95%D7%91%D7%99%D7%99%D7%98%D7%99%D7%AA]], אבל גם אח&quot;כ לא נגמל מזה).
-* היה גם [[טנק|https://he.wikipedia.org/wiki/IS-2]] עם שם כזה.
-* במציאות של הסדרה [[Happy Hour|HH]] (ש[[גורה]] [[ואני|יויו]] כתבנו), הוא השרת של [[געזונטהייטס]] שגר ב[[מרתף|המרתף של סטלין]], ומפעיל מתוכו, בין השאר, שרת מקומי בשם [[שָה נוּאָר]].
-* את ההשראה לשם קיבלתי מדמות משעשעת בשם סטלין שניהלה בעבר שרת עם משחקים מוזרים ברשת האנונימית [[I2P|https://en.wikipedia.org/wiki/I2P]] [המכונה &quot;אפלה&quot; בתקשורת האנטי-חופשית]. מעניין מי הוא/היא/הם.
 
-!!![[תמר|https://tooot.im/@tamarl]] (נציגת [[האחיות כהן]] במציאות האמיתית™ שבה אתם נמצאים):
+כדי להגיע למשרד של סטלין, השרת של [[געזונטהייטס]] שנמצא [[במרתף|המרתף של סטלין]] הבניין, צריך לעבור דרך מכשולים שמבטיחה אי הגעה. הוא מפעיל מתוכו, בין השאר, [[שרת מקומי|שָה נוּאָר]].
 
-* יויו לא יודע, אבל סטלין מרשת I2P היה בעצם עורכת וידאו מאוקראינה (לא שזה משנה).
-* בהשראת סטלין של [[יויו]], התקין [[הדוד|הדוד האמיתי]] [[מערכת הפעלה פתוחה|https://en.wikipedia.org/wiki/OpenWrt]] על נתב שקיבל מחבר, ופתח רשת ווייפיי לשימוש דיירי הבניין בשם [[המרתף של סטלין|https://codepen.io/thedod/full/aLLdNX/]] שכוללת רדיו, צ'אט, ועוד.
+
+
+&lt;&lt;englink [[Stalin]]&gt;&gt;
 
 </pre>
 </div>
@@ -19911,10 +19920,10 @@ Fapina''
 
 &lt;&lt;englink [[The sisters' questionnaire]]&gt;&gt;</pre>
 </div>
-<div created="20161026213244448" modified="20200322164831955" tags="HH" title="שָה נוּאָר">
+<div created="20161026213244448" modified="20200627111612104" tags="HH" title="שָה נוּאָר">
 <pre>ב[[ים טתיס]] אין כיסוי סלולרי או אינטרנט, אבל ב[[געזונטהייטס]] יש
 [[מגדל סלולרי מקומי|https://en.wikipedia.org/wiki/OpenBTS]]
-שמספק לדיירים טלפוניה ביניהם, וגישה ל[[אינטראנט|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%90%D7%A0%D7%98]], שזו מילה קצת גדולה בשביל רשת שמכילה שרת אחד בלבד. לשרת הזה קוראים שָה נוּאָר. ממעמקי [[המרתף של סטלין]] הוא מספק עולם דיגיטלי קסום וארכאי (כאילו צוקרברג וסנואודן לא היו מעולם): פורום, מערכת בלוגים, וויקי, ואפילו [[מערכת רדיו מקוון|https://en.wikipedia.org/wiki/Icecast]] שבאמצעותה אפשר להאזין ל[[גלי זחל]] — תחנת הרדיו של [[חנות התקליטים|חנות דיסקים]].
+שמספק לדיירים טלפוניה ביניהם, וגישה ל[[אינטראנט|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%90%D7%A0%D7%98]], שזו מילה קצת גדולה בשביל רשת שמכילה שרת אחד בלבד. לשרת הזה קוראים שָה נוּאָר. ממעמקי [[המרתף של סטלין]] הוא מספק עולם דיגיטלי קסום וארכאי: פורום, מערכת בלוגים, וויקי, ואפילו [[מערכת רדיו מקוון|https://en.wikipedia.org/wiki/Icecast]] שבאמצעותה אפשר להאזין ל[[גלי זחל]] — תחנת הרדיו של [[חנות התקליטים|חנות דיסקים]].
 
 @@.center
 [img[למצולמים אין קשר|https://upload.wikimedia.org/wikipedia/commons/4/4c/Blackcat-Lilith.jpg]]
