--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הקליניקה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מצפה ראשית]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200623164437244" title="$:/temp/search">
+<div created="20161023184814872" modified="20200625131937130" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11094,7 +11094,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200614141707147" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200625132321368" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -16663,12 +16663,19 @@ We rise to play a greater part.
 &lt;&lt;englink [[Ghetto`s map]]&gt;&gt;
 </pre>
 </div>
-<div created="20170501184958435" modified="20200426134821904" tags="HH בתים משפחות" title="מצפה ראשית">
+<div created="20170501184958435" modified="20200625132352149" tags="HH בתים משפחות" title="מצפה ראשית">
 <pre>[img[pictures/mizpe-reshit.jpg]]
 
 !!![[גורה]]:
 
-מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
+מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].
+
+
+
+
+
+&lt;&lt;englink [[Genesis Hilltop]]&gt;&gt;
+</pre>
 </div>
 <div created="20170223175057546" modified="20200330164417018" tags="חבר [[כפות ידיים]]" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
