--- a/english.html
+++ b/english.html
@@ -589,6 +589,8 @@ Error message and password prompt
 
 <li>Holiday psalms</li>
 
+<li>Holocaust</li>
+
 <li>Hora</li>
 
 <li>Hormones</li>
@@ -9150,7 +9152,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The Camera]] [[The bartender]] Genejuice [[Coen Sisters]]" title="$:/StoryList">
+<div list="Holocaust [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11722,6 +11724,13 @@ It's the end of Sukkot 2018, at the afternoon hours, Sheffi drove with Nano our 
 
 
 </pre>
+</div>
+<div created="20200627215526134" modified="20200627215727786" tags="HH" title="Holocaust">
+<pre>
+[img[pictures/shoa.jpg]]
+
+
+ &lt;&lt;heblink [[שואה]]&gt;&gt;</pre>
 </div>
 <div created="20200215192758642" modified="20200215194208454" tags="[[Iry claims]] [[How many songs can you even invent at all]] Music" title="Hora">
 <pre>[img[pictures/hora.jpg]]
@@ -14409,8 +14418,7 @@ The [[Alexanderian|Alexander Technique]] thinking is very beneficial, in order t
 </pre>
 </div>
 <div created="20200627152629924" modified="20200627152804385" tags="HH Metafiction" title="Stalin">
-<pre>
-[img[pictures/stalin.jpg]]
+<pre>[img[pictures/stalin.jpg]]
 
 
 
@@ -14753,8 +14761,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 </pre>
 </div>
 <div created="20200627162251658" modified="20200627162501360" tags="HH" title="The Camera">
-<pre>
-[img[pictures/UqCNt0i5VQFWqv6t.jpg]]
+<pre>[img[pictures/UqCNt0i5VQFWqv6t.jpg]]
 
 
 
@@ -14932,9 +14939,8 @@ The grass after rain, is greenish green.
  &lt;&lt;heblink [[הדשא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200627160310173" modified="20200627160935137" tags="HH" title="The Hairdresser">
-<pre>
-[img[pictures/hasaparit.jpg]]
+<div created="20200627160310173" modified="20200627220347072" tags="HH" title="The Hairdresser">
+<pre>[img[pictures/hasaparit.jpg]]
 
 !!![[Gura]]:
 
@@ -14944,7 +14950,7 @@ The [[K sisters|The K Sisters]] can't stand her.
 
 
 
-  &lt;&lt;heblink [[]]&gt;&gt;
+  &lt;&lt;heblink [[הספרית]]&gt;&gt;
 </pre>
 </div>
 <div created="20200217200909473" modified="20200219133149839" tags="Kitchens [[The kitchen by Genevieve]]" title="The hierarchy in the refrigerator">
@@ -14987,8 +14993,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 </pre>
 </div>
 <div created="20200627160839146" modified="20200627161221073" tags="HH" title="The K Sisters">
-<pre>
-[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
 
 
 !!![[Gura]]:
@@ -15041,8 +15046,7 @@ Here and now during the Corona times, not more than a hundred meters from home, 
 </pre>
 </div>
 <div created="20200627161929886" modified="20200627162137475" tags="HH" title="The Masseur">
-<pre>
-[img[pictures/sVIXOUGXydNO6V0Z.jpg]]
+<pre>[img[pictures/sVIXOUGXydNO6V0Z.jpg]]
 
 
 !!![[Gura]]:
@@ -15114,8 +15118,7 @@ Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometime
 </pre>
 </div>
 <div created="20200627161353971" modified="20200627161629845" tags="HH" title="The Sailor">
-<pre>
-[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
+<pre>[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
 
 
 !!![[Gura]]:
@@ -15615,7 +15618,7 @@ Who doesn't like the taste of [[real blood|https://www.imdb.com/title/tt0844441/
 
 </pre>
 </div>
-<div created="20200212204228178" modified="20200627162401548" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
+<div created="20200212204228178" modified="20200627215704179" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
 <pre>[img[pictures/television.jpg]]
 
 
