--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הברמנית [[האחיות כהן]]" title="$:/StoryList">
+<div list="שואה הספרית [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11094,7 +11094,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200627162523320" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200627215752556" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -13212,7 +13212,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[The Sailor]]&gt;&gt;</pre>
 </div>
-<div created="20170318193034082" modified="20200627160725525" tags="HH" title="הספרית">
+<div created="20170318193034082" modified="20200627220301559" tags="HH" title="הספרית">
 <pre>[img[pictures/hasaparit.jpg]]
 
 !!![[גורה]]:
@@ -19963,16 +19963,16 @@ Fapina''
 &lt;&lt;englink [[Chez Panisse]]&gt;&gt;
 </pre>
 </div>
-<div created="20161219172718131" modified="20170611194427231" tags="HH" title="שואה">
-<pre>&lt;blockquote&gt;&quot;אם נהיה מספיק מרוכזים, לא תהא שואה שלישית&quot; &amp;mdash; [[הדוד|הדוד האמיתי]]&lt;/blockquote&gt;
+<div created="20161219172718131" modified="20200627215827248" tags="HH" title="שואה">
+<pre>
+[img[pictures/shoa.jpg]]
 
-[img[pictures/MNqllZNTJjGIjZGO.png]]
 
-שואה ותקומה בכרטיס אחד
 
-^^או כספך חזרה^^
 
-[img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
+
+&lt;&lt;englink [[Holocaust]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20180620184300136" modified="20200315190544788" tags="[[חיות אוכל]] [[אירי טוענת]] מתכונים אפייה" title="שוקולד פאדג'">
