--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="שואה הספרית [[האחיות כהן]]" title="$:/StoryList">
+<div list="שואה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11094,7 +11094,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200627215752556" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200627220725329" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -16679,12 +16679,17 @@ We rise to play a greater part.
 &lt;&lt;englink [[Ghetto`s map]]&gt;&gt;
 </pre>
 </div>
-<div created="20170501184958435" modified="20200426134821904" tags="HH בתים משפחות" title="מצפה ראשית">
+<div created="20170501184958435" modified="20200627220750160" tags="HH בתים משפחות" title="מצפה ראשית">
 <pre>[img[pictures/mizpe-reshit.jpg]]
 
 !!![[גורה]]:
 
-מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].</pre>
+מצפה ראשית, או בקיצור, [[מִיצְפֶּרֶש|דיור מוגז]] (כמחווה למפעל [[מִיצְפְרֶש|מיצפרש]] המקומי), הוא הישוב [[שאסדת טתיס|ים טתיס]]  הייתה רק תרוץ להקמתו המתבקשת. בצידה המזרחי נמצא [[רובע מרינה|מרינה זוטו]], שהמשכו הוא אזור תעשיה, בו שוכן, בין השאר, הבניין של [[שלום]].
+
+
+
+&lt;&lt;englink [[Genesis Hilltop]]&gt;&gt;
+</pre>
 </div>
 <div created="20170223175057546" modified="20200330164417018" tags="חבר [[כפות ידיים]]" title="מקלדת">
 <pre>[img[pictures/mikledet.jpg]]
