--- a/index.html
+++ b/index.html
@@ -19968,7 +19968,7 @@ Fapina''
 &lt;&lt;englink [[Chez Panisse]]&gt;&gt;
 </pre>
 </div>
-<div created="20161219172718131" modified="20200627215827248" tags="HH" title="שואה">
+<div created="20161219172718131" modified="20200627221430486" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
 <pre>
 [img[pictures/shoa.jpg]]
 
