--- a/english.html
+++ b/english.html
@@ -9143,7 +9143,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200627162149706" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200627221728498" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9152,7 +9152,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Holocaust [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[On the spectrum]] Holocaust [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9172,7 +9172,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200627160511624" title="$:/temp/search">
+<div created="20161023184814872" modified="20200627221513873" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11725,9 +11725,11 @@ It's the end of Sukkot 2018, at the afternoon hours, Sheffi drove with Nano our 
 
 </pre>
 </div>
-<div created="20200627215526134" modified="20200627215727786" tags="HH" title="Holocaust">
+<div created="20200627215526134" modified="20200627221454129" tags="HH [[True stories]] [[The global village]]" title="Holocaust">
 <pre>
 [img[pictures/shoa.jpg]]
+
+
 
 
  &lt;&lt;heblink [[שואה]]&gt;&gt;</pre>
@@ -13338,13 +13340,13 @@ Odelia is a K sister who trades art. She dresses super stylish, knows tantra, su
 
 </pre>
 </div>
-<div created="20200304123659550" modified="20200304125727020" tags="[[Iry claims]] [[Monkeys with car keys]]" title="On the spectrum">
+<div created="20200304123659550" modified="20200627221744835" tags="[[Iry claims]] [[Monkeys with car keys]]" title="On the spectrum">
 <pre>[img[pictures/spectrum.jpg]]
 
 
 !!![[Iry]]:
 
-As part of education first degree studying, we had to take the &quot;holocaust&quot; course. The lecturer started the first lesson with the question:
+As part of education first degree studying, we had to take [[&quot;the holocaust&quot;|Holocaust]] course. The lecturer started the first lesson with the question:
 
 What is the most important thing we can learn from the holocaust?
 
@@ -14675,14 +14677,14 @@ Here, in the bubble-like ghetto, the one which is famous for its hallucinatory d
 
  &lt;&lt;heblink [[הבריסטות שכאן]]&gt;&gt;</pre>
 </div>
-<div created="20200219160048637" modified="20200627183506405" tags="HH Coffee" title="The bartender">
+<div created="20200219160048637" modified="20200627221309688" tags="HH Coffee" title="The bartender">
 <pre>[img[pictures/thebartender.jpg]]
 
 !!![[Gura]]:
 
 The youngest girl, is a bartender who juggles words and drinks, she mostly succeeds at not causing objections, even though at the beginning you mistake to assume she's antipathetic/irritating/snobbish. She has a phenomenal memory. 
 
-Hobbies: the holocaust, soccer, final solutions, and vehicles, mostly 4X4. 
+Hobbies: [[the holocaust|Holocaust]], soccer, final solutions, and vehicles, mostly 4X4. 
 
 She is the owner of an old green Ford pickup truck (the little machine).
 
